# openresponses-impl-client-openai

./: .gitignore  README.md  pyproject.toml
src/openresponses_impl_client_openai/client/: openai_responses_client.py
src/openresponses_impl_client_openai/utils/: copy_util.py  openai_response_model_util.py
test/unit_test/client/: test_openai_responses_client.py
test/unit_test/helpers/: response_payloads.py
test/unit_test/utils/: test_copy_util.py  test_response_model_util.py
