[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openresponses-impl-client-openai"
version = "0.1.0"
description = "Python Client library implementing the OpenResponses specification"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "rsato", email = "satookok@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "openai>=2.29.0",
    "openresponses-impl-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/post-class/openresponses-impl-client-openai"
Repository = "https://github.com/post-class/openresponses-impl-client-openai"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
